Implemented uploading of annotation config and svg
